lustre/lmv/lmv_obd.c
@@ -957,7 +957,7 @@ static int lmv_iocontrol(unsigned int cmd, struct obd_export *exp,
 		QCTL_COPY(oqctl, qctl);
 		rc = obd_quotactl(tgt->ltd_exp, oqctl);
 		if (rc == 0) {
-			QCTL_COPY(qctl, oqctl);
+			QCTL_COPY_NO_PNAME(qctl, oqctl);
 			qctl->qc_valid = QC_MDTIDX;
 			qctl->obd_uuid = tgt->ltd_uuid;
 		}
